Fixed tablet resolution cutoff

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2449,7 +2449,7 @@ body {
     display: none !important;
     }
 }
-@media (max-width: 768px){
+@media (max-width: 767px){
     .tablet{
     display: none !important;
     }
